--add-modules calls removed from tooling.
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>

(cherry picked from commit 3c45663)
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>